# python_api_rds_postgres

./: .env.example  .gitignore  README.md  pyproject.toml
python_api_rds_postgres/: app.py  model.py  scripts.py
tests/: test_app.py
