[tool.poetry]
name = "python-api-rds-postgres"
version = "0.1.0"
description = ""
authors = ["jeas560 <jeas560@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
pandas = "^2.1.4"
sqlalchemy = "^2.0.23"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
docker_up = "python_api_rds_postgres.scripts:docker_up"
docker_stop = "python_api_rds_postgres.scripts:docker_stop"
docker_down = "python_api_rds_postgres.scripts:docker_down"
app = "python_api_rds_postgres.scripts:app"
